--- a/src/app/components/forms/wallet-payment-form/wallet-payment-form.component.html
+++ b/src/app/components/forms/wallet-payment-form/wallet-payment-form.component.html
@@ -1,88 +1,90 @@
 <div class="w-full flex items-center justify-center">
-<p-card class="max-w-[800px]">
-
-  <!-- Header -->
-  <ng-template #header>
-    <div
-      class="border-b border-gray-300 flex items-center justify-center"
-      style="height: 60px"
+  <p-card class="max-w-[800px]">
+    <!-- Header -->
+    <ng-template #header>
+      <div
+        class="border-b border-gray-300 flex items-center justify-center"
+        style="height: 60px"
       >
-      <span class="font-bold text-xl px-4">شارژ آنلاین کیف پول</span>
-    </div>
-  </ng-template>
-
-  <!-- Wallet Info Display -->
-  @if (userWallet()) {
-    <div class="flex flex-col items-center md:flex-row md:justify-around gap-4 mb-6 px-4 text-right">
-      <div class="flex gap-2">
-        <div class="font-semibold">شناسه کیف پول:</div>
-        <div>{{ userWallet()?.MoneyWalletId }}</div>
+        <span class="font-bold text-xl px-4">شارژ آنلاین کیف پول</span>
       </div>
-      <div class="flex gap-2">
-        <div class="font-semibold">کد شناسایی کیف پول:</div>
-        <div>{{ userWallet()?.MoneyWalletCode }}</div>
-      </div>
-      <div class="flex gap-2">
-        <div class="font-semibold">موجودی:</div>
-        <div>{{ userWallet()?.Balance?.toLocaleString() }} ریال</div>
-      </div>
-    </div>
-  }
+    </ng-template>
 
-  @if (!userWallet()) {
-    <div class="text-center text-red-500 font-bold mb-6">
-      اطلاعات کیف پول موجود نیست
-    </div>
-  }
+    <!-- Wallet Info Display -->
+    @if (userWallet()) {
+      <div
+        class="flex flex-col items-center md:flex-row md:justify-around gap-4 mb-6 px-4 text-right"
+      >
+        <div class="flex gap-2">
+          <div class="font-semibold">شناسه کیف پول:</div>
+          <div>{{ userWallet()?.MoneyWalletId }}</div>
+        </div>
+        <div class="flex gap-2">
+          <div class="font-semibold">کد شناسایی کیف پول:</div>
+          <div>{{ userWallet()?.MoneyWalletCode }}</div>
+        </div>
+        <div class="flex gap-2">
+          <div class="font-semibold">موجودی:</div>
+          <div>{{ userWallet()?.Balance?.toLocaleString() }} ریال</div>
+        </div>
+      </div>
+    }
 
-  <!-- Amount Input -->
-  <app-text-input
-    label="مبلغ شارژ (تومان)"
-    [placeholder]="' مبلغ مورد نظر برای شارژ'"
-    [control]="amount"
-    addonWidth="12rem"
-    [disabled]="!userWallet()"
-    validationField="price"
-    type="number"
-    format="currency"
+    @if (!userWallet()) {
+      <div class="text-center text-red-500 font-bold mb-6">
+        اطلاعات کیف پول موجود نیست
+      </div>
+    }
+
+    <!-- Amount Input -->
+    <app-text-input
+      label="مبلغ شارژ (تومان)"
+      [placeholder]="' مبلغ مورد نظر برای شارژ'"
+      [control]="amount"
+      addonWidth="8rem"
+      [disabled]="!userWallet()"
+      validationField="price"
+      type="number"
+      format="currency"
     />
 
-  <!-- Preset Amount Buttons -->
-  <div class="flex flex-wrap gap-6 mt-6 justify-center">
-    @for (item of defaultAmounts(); track item) {
-      <app-button
-        variant="outlined"
-        styleClass="w-40 py-2"
-        size="small"
-        (click)="setAmountValue(item.Amount)"
-        [disabled]="!userWallet()"
+    <!-- Preset Amount Buttons -->
+    <div class="flex flex-wrap gap-6 mt-6 justify-center">
+      @for (item of defaultAmounts(); track item) {
+        <app-button
+          variant="outlined"
+          styleClass="w-40 py-2"
+          size="small"
+          (click)="setAmountValue(item.Amount)"
+          [disabled]="!userWallet()"
         >
-         {{item.AmountTitle}}
+          {{ item.AmountTitle }}
+        </app-button>
+      }
+    </div>
+
+    <div
+      class="flex gap-4 flex-col md:justify-center md:flex-row items-center mt-8 w-full"
+    >
+      <app-button
+        styleClass="md:w-40 w-30 font-bold py-2"
+        severity="info"
+        size="small"
+        (click)="paymentMoney()"
+        [disabled]="amount.invalid || !userWallet()"
+      >
+        شارژ
       </app-button>
-    }
-  </div>
 
-  <div class="flex gap-4 flex-col md:justify-center md:flex-row items-center mt-8 w-full">
-    <app-button
-      styleClass="md:w-40 w-30 font-bold py-2"
-      severity="info"
-      size="small"
-      (click)="paymentMoney()"
-      [disabled]="amount.invalid || !userWallet()"
+      <app-button
+        styleClass="md:w-40 w-30 font-bold py-2"
+        severity="warn"
+        size="small"
+        (click)="amount.reset(0)"
+        [disabled]="!userWallet() || amount.value === 0"
       >
-      شارژ
-    </app-button>
-
-    <app-button
-      styleClass="md:w-40 w-30 font-bold py-2"
-      severity="warn"
-      size="small"
-      (click)="amount.reset(0)"
-      [disabled]="!userWallet()  || amount.value === 0"
-      >
-   صفر کردن
-    </app-button>
-
-  </div>
-</p-card>
+        صفر کردن
+      </app-button>
+    </div>
+  </p-card>
 </div>
