--- a/src/app/components/forms/truck-driver-manages-form/driver-info-form/driver-info-form.component.html
+++ b/src/app/components/forms/truck-driver-manages-form/driver-info-form/driver-info-form.component.html
@@ -20,7 +20,7 @@
     </div>
   </form>
   <div
-    class="p-fluid grid grid-cols-12 col-span-12 gap-6 relative px-6"
+    class="p-fluid grid grid-cols-12 col-span-12 gap-6 relative"
     [class.pointer-events-none]="loading"
     [class.opacity-60]="loading"
   >
