--- a/src/app/components/forms/tickets-management-form/ticket-chat-message-form/ticket-chat-message-form.component.html
+++ b/src/app/components/forms/tickets-management-form/ticket-chat-message-form/ticket-chat-message-form.component.html
@@ -1,12 +1,12 @@
 <!-- Chat Container -->
 <div
-  class="w-full h-[600px] rounded-xl shadow-md flex flex-col overflow-hidden"
+  class="w-full h-[600px] shadow-2xl rounded-2xl flex flex-col overflow-hidden"
 >
   <!-- Messages Scrollable Area -->
-  <div class="flex-1 overflow-y-auto p-4 flex flex-col gap-8" #chatContainer>
+  <div class="flex-1 overflow-y-auto p-4flex flex-col gap-8 p-4" #chatContainer>
     @for (group of groupChats(); track $index) {
       <!-- Date separator -->
-      <div class="text-center font-medium text-gray-500">
+      <div class="text-center font-medium text-gray-500 my-2">
         {{ group.date }}
       </div>
 
@@ -20,20 +20,52 @@
               'items-start': isSender(chat.senderId),
             }"
           >
-            <!-- Bubble -->
-            <div
-              class="whitespace-pre-line px-4 py-2 rounded-xl max-w-[70%] break-words"
-              [ngClass]="{
-                'bg-primary/10 text-primary': isSender(chat.senderId),
-                'bg-gray-100 text-gray-800': !isSender(chat.senderId),
-              }"
-            >
-              {{ chat.message }}
+            <!-- Bubble + Time Wrapper -->
+            <div class="inline-flex flex-col max-w-[75%]">
+              <!-- Chat Bubble -->
+              <div
+                class="relative px-4 py-3 rounded-2xl border border-primary shadow-sm break-words flex flex-col gap-3"
+                [ngClass]="{
+                  'bg-primary-contrast': !isSender(chat.senderId),
+                  'bg-highlight-emphasis': isSender(chat.senderId),
+                }"
+              >
+                <!-- Attachments Section -->
+                @if (chat.attachments?.length) {
+                  <div class="flex flex-col gap-2">
+                    @for (fileId of chat.attachments; track $index) {
+                      <div
+                        class="flex justify-between bg-primary-contrast hover:bg-gray-100 dark:hover:bg-gray-950 gap-3 p-2 border rounded-xl cursor-pointer hover:shadow transition"
+                        (click)="downloadTicketFile(fileId)"
+                      >
+                        <i class="pi pi-file text-lg"></i>
+                        <span class="text-sm truncate grow">
+                          فایل پیوست {{ $index + 1 }}
+                        </span>
+                        <i
+                          class="pi pi-download ml-auto text-xs opacity-70 pt-1 px-1"
+                        ></i>
+                      </div>
+                    }
+                  </div>
+                }
+
+                <!-- Message Text -->
+                <div
+                  class="text-sm leading-relaxed"
+                  [ngClass]="{
+                    'border-t pt-2 px-1': chat.attachments?.length,
+                  }"
+                >
+                  {{ chat.message }}
+                </div>
+              </div>
+
+              <!-- Time (auto width = bubble width) -->
+              <span class="text-xs text-end opacity-60 mt-1">
+                {{ chat.time }}
+              </span>
             </div>
-            <!-- Time -->
-            <span class="text-xs text-gray-400 mt-1">
-              {{ chat.time }}
-            </span>
           </div>
         }
       </div>
@@ -41,24 +73,35 @@
   </div>
 
   <!-- Chat Input -->
-  <div class="flex items-center justify-center gap-4 p-3 border-t">
-    <textarea
-      #chatInput
-      [formControl]="ctrl('message')"
-      placeholder="پیام خود را تایپ کنید..."
-      rows="1"
-      class="flex-1 p-2 border rounded-lg resize-none overflow-hidden focus:ring focus:ring-primary/50"
-      (input)="autoResize($event)"
-    ></textarea>
-
-    <app-button
-      (onClick)="sendMessage()"
-      severity="primary"
-      [rounded]="true"
-      styleClass="py-2.5 px-2.5"
-      severity="info"
-      icon="pi pi-send"
-    >
-    </app-button>
+  <div class="w-full border-t-1 px-4 py-4">
+    <app-chat-box-input
+      (clickSend)="sendMessage(false)"
+      (clickFile)="uploadFileVisible = true"
+      [control]="this.ctrl('message')"
+      [disableSend]="this.ctrl('message').invalid"
+    />
   </div>
 </div>
+
+<p-dialog
+  header="ارسال فایل"
+  [modal]="true"
+  [draggable]="false"
+  [(visible)]="uploadFileVisible"
+  [style]="{ width: '50rem', maxWidth: '100%' }"
+>
+  <div class="flex gap-5 flex-col max-h-[500px] overflow-hidden">
+    <div class="flex-1 overflow-y-auto">
+      <app-ticket-files-upload [control]="this.ctrl('attachments')" />
+    </div>
+    <div class="flex-1">
+      <app-chat-box-input
+        (clickSend)="sendMessage(true)"
+        [control]="this.ctrl('attachmentMessage')"
+        placeholder="توضیحات فایل ضمیمه"
+        [enableSendFile]="false"
+        [disableSend]="isSendFileDisabled()"
+      />
+    </div>
+  </div>
+</p-dialog>
