feat(ticket-files-upload)[src/app/components/forms/tickets-management-form/ticket-files-upload/*]: add captcha handling for file uploads and integrate captcha guard component

--- a/src/app/components/forms/tickets-management-form/ticket-files-upload/ticket-files-upload.component.html
+++ b/src/app/components/forms/tickets-management-form/ticket-files-upload/ticket-files-upload.component.html
@@ -5,3 +5,10 @@
   (removeUploadFile)="removeUploadFile($event)"
   accept="image/png,image/jpg,image/jepg"
 />
+
+@if (captchaGuardVisible() && guardType() === "captcha") {
+  <app-ticket-guard-captcha-form
+    [activeCaptcha]="captchaGuardVisible()"
+    (hiddenDialog)="captchaGuardVisible.set(false)"
+  />
+}
