refactor(new-password-dialog)[src/app/components/shared/dialog]: update input property usage and improve clipboard copy functionality

--- a/src/app/components/shared/dialog/new-password-dialog/new-password-dialog.component.html
+++ b/src/app/components/shared/dialog/new-password-dialog/new-password-dialog.component.html
@@ -2,23 +2,23 @@
   <div class="flex items-center justify-between">
     <span class="w-32"> شناسه کابری: </span>
     <app-button
-      (click)="copyToClipboard(username)"
+      (click)="copyToClipboard(username())"
       size="small"
       styleClass="px-6 w-40"
       severity="info"
     >
-      {{ username }}
+      {{ username() }}
     </app-button>
   </div>
 
   <div class="flex items-center justify-between">
     <span class="w-32"> رمز عبور جدید </span>
     <app-button
-      (click)="copyToClipboard(password)"
+      (click)="copyToClipboard(password())"
       size="small"
       styleClass="px-6 w-40"
     >
-      {{ password }}
+      {{ password() }}
     </app-button>
   </div>
 </div>
