--- a/src/app/components/shared/layout/tab-manager/tab-manager.component.html
+++ b/src/app/components/shared/layout/tab-manager/tab-manager.component.html
@@ -2,34 +2,42 @@
   <div class="overflow-x-auto w-full">
     <div class="flex flex-nowrap pr-1 min-w-max border-b border-gray-300">
       @for (tab of tabs.values(); track tab.id) {
-      <div class="relative flex items-center h-8">
-        <div>
-          <div
-            [id] = "tab.id"
-            (click)="onClickTab(tab)"
-            class="flex gap-2 rounded-t-2xl pr-3 py-2 cursor-pointer transition-all ease-in-out duration-300 border-1"
-            [ngClass]="{
-              'bg-highlight-emphasis pl-7 text-shadow-primary-emphasis border-primary font-bold text-sm':
-                selectTab().id === tab.id,
-              'hover:bg-highlight-emphasis pl-3 border-transparent text-xs':
-                selectTab().id !== tab.id
-            }"
-          >
-            <i class="pi" [class]="tab.icon"></i>
-            <span>{{ tab.title }}</span>
-          </div>
-        </div>
-
-        @if (tab.closeable && selectTab().id === tab.id) {
-        <button
-          (click)="closeTab(tab.id)"
-          class="absolute top-0.5 left-2 scale-80 text-red-400 hover:text-red-600 hover:scale-90 transition-transform duration-300"
-          [title]="`بستن تب ${tab.title}`"
+        <div
+          (mouseover)="hoverTabId.set(tab.id)"
+          (mouseleave)="mouseLeaveOnTabHover(tab.id)"
+          class="relative flex items-center h-8"
         >
-          <i class="pi pi-times"></i>
-        </button>
-        }
-      </div>
+          <div>
+            <div
+              [id]="tab.id"
+              (click)="onClickTab(tab)"
+              class="flex gap-2 rounded-t-2xl pr-3 py-2 cursor-pointer transition-all ease-in-out duration-300 border-1"
+              [class.bg-highlight-emphasis]="selectTab().id === tab.id"
+              [ngClass]="{
+                'pl-7 text-shadow-primary-emphasis border-primary font-bold text-sm':
+                  selectTab().id === tab.id || hoverTabId() === tab.id,
+                'hover:bg-highlight-emphasis pl-3 border-transparent text-xs':
+                  selectTab().id !== tab.id && hoverTabId() !== tab.id,
+              }"
+            >
+              <i class="pi" [class]="tab.icon"></i>
+              <span>{{ tab.title }}</span>
+            </div>
+          </div>
+
+          @if (
+            tab.closeable &&
+            (selectTab().id === tab.id || hoverTabId() === tab.id)
+          ) {
+            <button
+              (click)="closeTab(tab.id)"
+              class="absolute top-0.5 left-2 scale-80 text-red-400 hover:text-red-600 hover:scale-90 transition-transform duration-300"
+              [title]="`بستن تب ${tab.title}`"
+            >
+              <i class="pi pi-times"></i>
+            </button>
+          }
+        </div>
       }
     </div>
   </div>
@@ -43,7 +51,7 @@
   <div class="w-full overflow-x-auto" #tabContent>
     <p-tablist class="w-full overflow-x-auto">
       @for (view of selectTab().config.subTab; track $index) {
-       <p-tab class="text-sm" [value]="$index">{{ view.title }}</p-tab>
+        <p-tab class="text-sm" [value]="$index">{{ view.title }}</p-tab>
       }
     </p-tablist>
   </div>
