--- a/src/app/components/shared/layout/sidebar/logo/logo.component.html
+++ b/src/app/components/shared/layout/sidebar/logo/logo.component.html
@@ -1,14 +1,14 @@
-<div class="flex flex-col items-center h-70 relative overflow-hidden">
+<div class="flex flex-col relative items-center h-70 overflow-hidden">
   <img
     ngSrc="/assets/rmto-logo-full-text.png"
     fill
-    class="object-contain dark:hidden"
+    class="object-contain dark:invisible visible"
     alt="RMTO Logo"
   />
   <img
     ngSrc="/assets/rmto-logo-dark-full-text.png"
     fill
-    class="object-contain hidden dark:block"
+    class="object-contain dark:visible invisible"
     alt="RMTO Logo"
   />
 </div>
