--- a/src/app/components/forms/traffic-management-forms/traffic-entries-form/traffic-entries-form.component.html
+++ b/src/app/components/forms/traffic-management-forms/traffic-entries-form/traffic-entries-form.component.html
@@ -1,4 +1,4 @@
-@if (!trafficInfo()) {
+@if (trafficInfo()) {
   <h3
     class="text-2xl font-bold tracking-tight text-center border-b-1 py-3 mb-4 rounded-2xl"
     [class]="getColor(trafficInfo()?.EntryExitColor ?? '')"
