ui[transport-companies-form][src/app/components/forms/transport-companies-form/transport-companies-form.component.html]: disable status switch when tcid invalid

--- a/src/app/components/forms/transport-companies-form/transport-companies-form.component.html
+++ b/src/app/components/forms/transport-companies-form/transport-companies-form.component.html
@@ -98,6 +98,7 @@
 
     <!-- وضعیت -->
     <app-toggle-switch-input
+      [readonly]="this.TCId.invalid"
       class="col-span-12 flex px-4"
       [label]="appTitle.toggleSwitches.status"
       [control]="Active"
