ui[traffic-entries-form][src/app/components/forms/traffic-management-forms/traffic-entries-form/traffic-entries-form.component.html]: change currency label from toman to rial

--- a/src/app/components/forms/traffic-management-forms/traffic-entries-form/traffic-entries-form.component.html
+++ b/src/app/components/forms/traffic-management-forms/traffic-entries-form/traffic-entries-form.component.html
@@ -25,7 +25,7 @@
           <div class="flex justify-between">
             <span>موجودی</span>
             <span>
-              {{ trafficInfo()?.MoneyWallet?.Balance | number: "1.0-0" }} تومان
+              {{ trafficInfo()?.MoneyWallet?.Balance | number: "1.0-0" }} ریال
             </span>
           </div>
 
@@ -33,7 +33,7 @@
           <div class="flex justify-between">
             <span>هزینه توقف</span>
             <span>
-              {{ trafficInfo()?.TrafficStoppageCost | number: "1.0-0" }} تومان
+              {{ trafficInfo()?.TrafficStoppageCost | number: "1.0-0" }} ریال
             </span>
           </div>
 
@@ -41,7 +41,7 @@
           <div class="flex justify-between">
             <span>مبلغ قابل پرداخت</span>
             <span class="font-semibold text-emerald-600">
-              {{ trafficInfo()?.Payable | number: "1.0-0" }} تومان
+              {{ trafficInfo()?.Payable | number: "1.0-0" }} ریال
             </span>
           </div>
         </div>
