--- a/src/app/components/forms/driver-load-management-form/load-capacitor-form/load-capacitor-form.component.html
+++ b/src/app/components/forms/driver-load-management-form/load-capacitor-form/load-capacitor-form.component.html
@@ -47,63 +47,48 @@
         @for (loads of province.myLoads; track $index) {
           <p-card
             [header]="'کد بار: ' + loads.LoadId"
-            class="w-[90%] min-w-[300px] max-w-[450px] mb-3 shadow-md rounded-2xl bg-emphasis"
+            class="w-[95%] sm:w-[90%] min-w-[200px] max-w-[450px] mb-3 shadow-md rounded-2xl bg-emphasis"
           >
             <div class="flex flex-col gap-3 text-sm">
               <!-- مسیر بار -->
-              <div class="flex flex-row justify-between">
+              <div class="flex flex-row gap-x-4 flex-wrap justify-between">
                 <span>مبدا: {{ loads.SoureCityTitle }}</span>
                 <span>مقصد: {{ loads.TargetCityTitle }}</span>
               </div>
 
               <!-- جزئیات بار -->
-              <div class="flex flex-row justify-between">
+              <div class="flex flex-row gap-x-4 flex-wrap justify-between">
                 <span>کالا: {{ loads.GoodTitle }}</span>
                 <span>تناژ: {{ loads.Tonaj }}</span>
               </div>
 
-              <div class="flex flex-row justify-between">
+              <div class="flex flex-row gap-x-4 flex-wrap justify-between">
                 <span>محل بارگیری: {{ loads.LoadingPlaceTitle }}</span>
                 <span>محل تخلیه: {{ loads.DischargingPlaceTitle }}</span>
               </div>
 
-              <!-- زمان -->
-              <div class="flex flex-row justify-between">
-                <span
-                  >تاریخ اعلان: {{ loads.AnnounceDate }}
-                  {{ loads.AnnounceTime }}</span
-                >
-                <span>وضعیت: {{ loads.LoadStatusName }}</span>
-              </div>
-
               <!-- شرکت و کاربر -->
               <div class="flex flex-col">
-                <span>شرکت حمل‌ونقل: {{ loads.TCTitle }}</span>
-                <span>کاربر ثبت‌کننده: {{ loads.UserName }}</span>
-              </div>
-
-              <!-- اعلان -->
-              <div class="flex flex-col border-t pt-2">
-                <span>عنوان اعلان: {{ loads.AnnouncementTitle }}</span>
-                <span>گروه اعلان: {{ loads.AnnouncementSGTitle }}</span>
+                <div class="flex flex-row gap-x-4 flex-wrap justify-between">
+                  <span>شرکت حمل‌ونقل: {{ loads.TCTitle }}</span>
+                  <span>شماره تلفن : -</span>
+                </div>
               </div>
 
               <!-- گیرنده -->
               <div class="flex flex-col border-t pt-2">
                 <span>گیرنده: {{ loads.Recipient }}</span>
                 <span>آدرس: {{ loads.Address }}</span>
-              </div>
-
-              <!-- توضیحات -->
-              <div class="flex flex-col border-t pt-2">
                 <span>توضیحات: {{ loads.Description }}</span>
+                <span>پارامتر های موثر: {{ loads.TPTParamsJoint }} </span>
               </div>
 
               <!-- مالی -->
-              <div class="flex flex-row justify-between border-t pt-2">
+              <div
+                class="flex flex-row justify-between flex-wrap gap-x-4 border-t pt-2"
+              >
                 <span>تعرفه: {{ loads.Tariff }}</span>
-                <span>مانده: {{ loads.Reminder }}</span>
-                <span>کل: {{ loads.Total }}</span>
+                <span>تعداد کل: {{ loads.Total }}</span>
               </div>
             </div>
 
