ui[date-picker-input][src/app/components/shared/inputs/date-picker-input/date-picker-input.component.html]: bind datepicker to dark theme conditionally

--- a/src/app/components/shared/inputs/date-picker-input/date-picker-input.component.html
+++ b/src/app/components/shared/inputs/date-picker-input/date-picker-input.component.html
@@ -27,6 +27,7 @@
     <!-- 📅 Persian Date Input -->
     <div class="w-full relative">
       <ng-persian-datepicker
+        [uiTheme]="getDarkThemeIfEnabled()"
         [ngClass]="
           datePickerPosition === 'top' ? 'position-top' : 'position-bottom'
         "
