--- a/src/app/components/forms/load-management-form/loads-list-form/loads-list-form.component.html
+++ b/src/app/components/forms/load-management-form/loads-list-form/loads-list-form.component.html
@@ -1,4 +1,4 @@
-<!-- Filter Grid -->
+list-load<!-- Filter Grid -->
 <div class="grid grid-cols-12 items-center gap-4 mb-5">
   <!-- Auto-complete filters -->
   @for (config of autoCompletions; track $index) {
