ui[transport-companies-form][src/app/components/forms/transport-companies-form/transport-companies-form.component.html]: add valueChange binding for toggle switch control

--- a/src/app/components/forms/transport-companies-form/transport-companies-form.component.html
+++ b/src/app/components/forms/transport-companies-form/transport-companies-form.component.html
@@ -102,6 +102,7 @@
       class="col-span-12 flex px-4"
       [label]="appTitle.toggleSwitches.status"
       [control]="Active"
+      (valueChagne)="changeStatusTransportCompony($event)"
     />
   </div>
 
