ui[table][src/app/components/shared/table/table.component.html]: enable row selection binding with selectedItems

--- a/src/app/components/shared/table/table.component.html
+++ b/src/app/components/shared/table/table.component.html
@@ -13,6 +13,7 @@
   (sortFunction)="onCustomSort($event)"
   [customSort]="customSort"
   (onPage)="onPageChange($event)"
+  [(selection)]="selectedItems"
 >
   <!-- Caption -->
   @if (enableCaptionButton) {
